# graphrag-code

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ablation_runner.py  benchmark_suite.py  eval_retrieval.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmark_results/run_20260531_024735/: report.md  results.json
docs/: CURSOR_CLAUDE_INTEGRATION.md  LITERATURE_REVIEW.md  RESEARCH.md  ROADMAP.md
eval/cases/: click.json  example.json  httpx.json  requests.json
examples/: graph_visualizer.html
integration/: README.md  aider_mcp_config.json  run_aider.bat  run_aider.ps1
src/codegraph/: __init__.py  cli_agent.py  export_graph.py  graph_engine.py  indexer.py  mcp_server.py
src/graphrag_code/: __init__.py  cli_agent.py  export_graph.py  graph_engine.py  indexer.py  mcp_server.py
tests/: test_eval_retrieval.py  test_graph_engine.py  test_graph_engine_extended.py  test_indexer.py  test_mcp_server.py
