[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph-core"
version = "0.1.0"
description = "Knowledge Graph for Codebases using AST and Bidirectional PPR (Model Context Protocol Supported)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Captain Bang & Antigravity Team", email = "oss@antigravity.team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "rustworkx>=0.17.1",
    "mcp>=1.27.2",
    "litellm>=1.81.10",
    "python-dotenv>=1.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8"
]

[project.scripts]
# Lưu ý: Các entry point này sẽ hoạt động sau khi ta đưa code vào cấu trúc src/codegraph
codegraph-index = "codegraph.indexer:main"
codegraph-mcp = "codegraph.mcp_server:main"
codegraph-agent = "codegraph.cli_agent:main"
