[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-code-core"
version = "0.1.0"
description = "Knowledge Graph for Codebases using AST and Bidirectional PPR (Model Context Protocol Supported)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Bydecom" }
]

[project.urls]
Homepage = "https://github.com/bydecom"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "rustworkx>=0.17.1",
    "mcp>=1.27.2",
    "litellm>=1.81.10",
    "python-dotenv>=1.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]
research = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
]
benchmark = [
    "litellm>=1.81.10",
    "tiktoken>=0.7",
    "rich>=13.0",
]
all = [
    "graphrag-code-core[dev,research,benchmark]"
]

[project.scripts]
# Note: These entry points work properly now that code is in src/graphrag_code
graphrag-code-index = "graphrag_code.indexer:main"
graphrag-code-mcp = "graphrag_code.mcp_server:main"
graphrag-code-agent = "graphrag_code.cli_agent:main"
graphrag-code-export = "graphrag_code.export_graph:main"
